# chess

./: CMakeLists.txt  Makefile  README.md  main.cpp
data/: debug.sh  profile.sh  run.sh  valgrind.sh
src/: App.cc  App.hh  App.hxx  CMakeLists.txt  ChessApp.cc  ChessApp.hh  ChessApp.hxx
src/app/: CMakeLists.txt  Controls.hh  PGEApp.cc  PGEApp.hh  PGEApp.hxx
src/chess/: Board.cc  Board.hh  CMakeLists.txt  Pieces.hh
src/coordinates/: CMakeLists.txt  CoordinateFrame.cc  CoordinateFrame.hh
src/game/: AI.cc  AI.hh  Board.cc  Board.hh  CMakeLists.txt  ChessGame.cc  ChessGame.hh  Game.cc  Game.hh  Game.hxx  GameState.cc  GameState.hh  Move.cc  Move.hh  Pieces.cc  Pieces.hh  Pieces_std_specialization.hh  Round.cc  Round.hh  Threat.cc  Threat.hh
src/game/ai/: AI.cc  AI.hh  BoardEvaluation.cc  BoardEvaluation.hh  CMakeLists.txt  MinimaxAI.cc  MinimaxAI.hh  MoveGeneration.cc  MoveGeneration.hh  RandomAI.cc  RandomAI.hh  Types.hh
src/game/pieces/: Bishop.cc  Bishop.hh  CMakeLists.txt  Color.cc  Color.hh  Common.cc  Common.hh  Coordinates.cc  Coordinates.hh  Coordinates_std_specialization.hh  King.cc  King.hh  Knight.cc  Knight.hh  Move.cc  Move.hh  Pawn.cc  Pawn.hh  Piece.cc  Piece.hh  Pieces.hh  Queen.cc  Queen.hh  Rook.cc  Rook.hh
src/ui/: CMakeLists.txt  Menu.cc  Menu.hh  Menu.hxx
